# Django-Ultra-RBAC

./: LICENSE  README.md  admin.py  decorators.py  middleware.py  models.py  setup.cfg  setup.py  tox.ini  utils.py
src/: decorators.py
src/django_ultra_rbac/: middleware.py
