[metadata]
name = django-ultra-rbac
version = attr: django_ultra_rbac.__version__
author = Seam Uddin
author_email = seamuddin.me@gmail.com
description = A flexible RBAC system for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seamuddin/Django-Ultra-RBAC/
project_urls =
    Bug Tracker = https://github.com/yourusername/django-ultra-rbac/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    django>=3.2

[options.packages.find]
where = src